# personal_quant_model

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT_2026_05.md  A股多因子增强策略平台 —— 业务逻辑详解.md  CLAUDE.md  Dockerfile  PROJECT_FIX_SUMMARY.md  README.md  USAGE_GUIDE.md  alembic.ini  backtest_all_weather_2024-04-01_2024-06-30.json  backtest_all_weather_2024-04-01_2024-12-31.json  backtest_result_hs300_2024-01-01_2024-12-31.json  data_audit_report.txt  deployment.md  docker-compose.yml  investment_decision_20260423.json  package-lock.json  package.json  pyproject.toml  requirements.txt  start.py  strategy_report.json  strategy_report_all.json  strategy_report_zz1000.json  strategy_report_zz500.json  temp_requirements.txt  test_hypothesis_bugs.py  test_imports.py  validate_all.py  validate_code.py
.github/workflows/: ci.yml  nightly.yml
alembic/: env.py
alembic/versions/: 505b9b5bc8ac_init_postgresql.py  824f09817f30_merge_audit_logs_and_industry_temporal_.py  add_payment_tables.py  add_pit_financial_indexes.py  b49f9755a8a8_add_audit_logs_table.py  ba222cea83cf_add_foreign_keys_and_check_constraints.py  c1d2e3f4a5b6_add_audit_logs_table.py  d5e6f7a8b9c0_add_stock_industry_temporal_fields.py
app/: .env  .env.example  main.py  requirements.txt
app/api/: config_api.py
app/core/: __init__.py  adaptive_factor_engine.py  alpha_modules.py  audit.py  audit_decorator.py  backtest_engine.py  backtest_integrity.py  backtest_performance.py  batch_query.py  cache.py  capacity_test.py  celery_config.py  checkpoint.py  circuit_breaker.py  compliance.py  config.py  config_center.py  config_loader.py  daily_pipeline.py  data_sync.py  ensemble.py  errors.py  exception_handlers.py  exceptions.py  experiment_manager.py  factor_analyzer.py  factor_calculator.py  factor_engine.py  factor_monitor.py  factor_orthogonalization.py  factor_preprocess.py  feature_pipeline.py  labels.py  logging.py  ml_integration.py  model_scorer.py  model_trainer.py  multi_factor_model.py  online_learning.py  performance.py  (+19 more)
app/data/: knowledge_base.json
app/data_sources/: __init__.py  akshare_source.py  base.py  cleaner.py  crawler_source.py  normalizer.py  tushare_source.py  tushare_source_enhanced.py
app/db/: base.py  base_class.py  connection.py  database.py
app/middleware/: middleware.py  query_monitor.py  rate_limit.py  security.py  tracing.py
app/models/: __init__.py  alert_logs.py  analyst_estimates_pit.py  audit_log.py  backtests.py  content.py  data_snapshot_registry.py  event_center.py  experiment_registry.py  factor_metadata.py  factors.py  market.py  model_registry.py  models.py  monitor_factor_health.py  monitor_model_health.py  payments.py  permissions.py  (+14 more)
config/: backtest.yaml  base.yaml  experiment_example.json  factors.yaml  labels.yaml  model.yaml  monitoring.yaml  portfolio.yaml  risk.yaml  timing.yaml  universe.yaml
data/: industry_changes_template.md
document/: ADD.md  ALL_WEATHER_STRATEGY_SUMMARY.md  API.md  ARCHITECTURE_AUDIT_2026_05.md  COMPREHENSIVE_AUDIT_REPORT.md  CONFIG_CENTER.md  CPCV_GUIDE.md  DAILY_SUMMARY_2026_05_04.md  DEPLOYMENT.md  FACTOR_CALCULATION_COMPLETION.md  FACTOR_DATA_VERIFICATION.md  FACTOR_ORTHOGONALIZATION_GUIDE.md  FRONTEND_OPTIMIZATION_SUMMARY.md  MULTI_FACTOR_MODEL_GUIDE.md  N_PLUS_ONE_OPTIMIZATION.md  N_PLUS_ONE_OPTIMIZATION_P1.md  N_PLUS_ONE_OPTIMIZATION_P2.md  N_PLUS_ONE_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_HISTORY.md  OPTIMIZATION_PLAN_2026Q2.md  P0_EXECUTION_GUIDE.md  P0_FIXES_REPORT.md  P0_VERIFICATION_IC_CALCULATION.md  P0_VERIFICATION_INDEX_CONSTITUENT.md  P0_VERIFICATION_INDUSTRY_HISTORICAL.md  P0_VERIFICATION_PREPROCESSING_ORDER.md  P0_VERIFICATION_PROGRESS.md  P0_VERIFICATION_RESIDUAL_MOMENTUM.md  PHASE1_FIXES.md  PHASE2_PERFORMANCE.md  PHASE3_ARCHITECTURE.md  PLAN_CODE_OPTIMIZATION.md  PLAN_COMMERCIALIZATION.md  PLAN_COPYWRITING.md  PLAN_PRODUCT.md  PLAN_UI_UX.md  PRD.md  PRD2.1.md  PROGRESS_REPORT.md  (+17 more)
frontend/: .env.example  .eslintrc.cjs  DESIGN_SYSTEM.md  DESIGN_UPGRADE.md  STRATEGY_PRESET_SUMMARY.md  UI_REDESIGN_SUMMARY.md  UI_REDESIGN_V3.md  index.html  package-lock.json  package.json  run-tests.sh  tsconfig.app.json  vite.config.ts
output/: pipeline_report_20260418_192214.md  pipeline_report_20260418_192922.md
scripts/: add_all_weather_backtest_results.py  add_financial_indexes.py  add_indexes.py  add_typing_imports.py  backfill_financial_em.py  backfill_financial_fields.py  backfill_financial_priority.py  backfill_index_components_2024.py  backtest_multi_factor_model.py  batch_prepare_style_factors.py  batch_prepare_style_factors_parallel.py  batch_sync_data.py  check_database_schema.py  check_db_status.py  check_factor_data.py  code_quality.sh  config_manager.py  create_all_weather_template.py  db_optimization_migration.py  diagnose_p0.py  e2e_test.py  e2e_test_real.py  end_to_end.py  example_factor_orthogonalization.py  experiment_cli.py  fetch_index_members_2024.py  fetch_index_weights_2024.py  fix_daily_basic_date_type.py  fix_imports.py  fix_p0_issues.py  fix_services_typing.py  fix_typing_annotations.py  generate_daily_strategy.py  generate_sample_data.py  init_db.py  init_payment_config.py  init_preset_strategies.py  init_subscription.py  inspect_table_columns.py  migrate_add_pit_fields.py  (+57 more)
tests/: conftest.py  conftest_golden.py  test_alpha_modules.py  test_api.py  test_backtest_integrity.py  test_circuit_breaker.py  test_core_engines.py  test_cpcv.py  test_data_audit.py  test_data_sources.py  test_e2e.py  test_ensemble.py  test_factor_engine.py  test_golden_master.py  test_golden_master_enhanced.py  test_ic_lookahead_bias.py  test_ic_no_lookahead.py  test_index_constituent_historical.py  test_industry_historical.py  test_main.py  test_no_lookahead.py  test_p0_fixes_validation.py  test_performance.py  test_pit_guard_multiversion.py  test_portfolio.py  test_preprocessing_order.py  test_property_based.py  test_pure_factor_math.py  test_pure_preprocess.py  test_residual_momentum.py  test_risk_model.py  test_survivorship_bias.py  test_v2_core.py  test_v2_modules.py
(+354 files in other folders)
