[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-platform"
version = "1.0.0"
description = "A股多因子增强策略平台"
authors = [{name = "Camus", email = "your-email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "pydantic==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart>=0.0.1",
    "celery==5.3.4",
    "redis==5.0.1",
    "pandas==2.1.4",
    "numpy==1.24.3",
    "scipy==1.11.4",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "jinja2==3.1.2",
    "python-dotenv==1.0.0",
    "pyarrow==14.0.1",
    "polars==0.19.12",
    "requests==2.31.0",
    "pytz==2023.3.post1",
    "python-dateutil==2.8.2",
    "click==8.1.7",
    "psycopg2-binary==2.9.9",
    "pydantic-settings==2.1.0",
    "aiofiles==23.2.1",
    "fastapi-users==12.1.0",
    "fastapi-users-db-sqlalchemy==6.0.0",
    "werkzeug==3.0.1",
    "python-decouple==3.8",
    "prometheus-client>=0.20.0",
    "tushare>=1.4.0",
    "akshare>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "hmmlearn>=0.3.0",
    "cvxpy>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/your-username/quant-platform"
Repository = "https://github.com/your-username/quant-platform.git"
Documentation = "https://github.com/your-username/quant-platform#readme"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "pandas.*",
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "polars.*",
    "tushare.*",
    "akshare.*",
    "sklearn.*",
    "lightgbm.*",
    "hmmlearn.*",
    "cvxpy.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v"]

[tool.pytest-asyncio]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/venv/*",
    "app/tests/*",
    "app/db/*",
    "app/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
