[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
extra-build-dependencies = { pyarrow = ["setuptools"] }

[project]
name = "quant-platform"
version = "1.0.0"
description = "A股多因子增强策略平台"
authors = [{name = "Camus", email = "your-email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "pydantic==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart>=0.0.1",
    "celery==5.3.4",
    "redis==5.0.1",
    "pandas==2.1.4",
    "numpy==1.26.2",
    "scipy>=1.11.4",
    "scikit-learn>=1.3.2",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "jinja2==3.1.2",
    "python-dotenv==1.0.0",
    "pyarrow>=14.0.1",
    "polars==0.19.12",
    "requests==2.31.0",
    "pytz==2023.3.post1",
    "python-dateutil==2.8.2",
    "click==8.1.7",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings==2.1.0",
    "aiofiles==23.2.1",
    "fastapi-users==12.1.0",
    "fastapi-users-db-sqlalchemy==6.0.0",
    "werkzeug==3.0.1",
    "python-decouple==3.8",
    "prometheus-client>=0.20.0",
    "tushare>=1.4.0",
    "akshare>=1.14.0",
    "lightgbm>=4.0.0",
    "hmmlearn>=0.3.0",
    "cvxpy>=1.4.0",
    "httpx>=0.27.0,<0.28",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.11.0",
    "pyright>=1.1.393",
    "mypy>=1.14.0",
    "pre-commit>=3.3.0",
    "hypothesis>=6.100.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "hmmlearn>=0.3.0",
    "cvxpy>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/your-username/quant-platform"
Repository = "https://github.com/your-username/quant-platform.git"
Documentation = "https://github.com/your-username/quant-platform#readme"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
    "PERF",   # perflint
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "FURB",   # refurb
    "LOG",    # flake8-logging
]
ignore = [
    "E501",    # line length handled by formatter
    "TRY003",  # avoid long messages in exception -- too strict
    "B008",    # function call in default argument -- common in FastAPI Depends()
    "RUF001",  # ambiguous unicode character in string (Chinese)
    "RUF002",  # ambiguous unicode character in docstring (Chinese)
    "RUF003",  # ambiguous unicode character in comment (Chinese)
    "N806",    # non-lowercase variable in function (constants like MAX_DRAWDOWN)
    "N803",    # argument name should be lowercase (quant conventions like df, X)
    "N802",    # function name should be lowercase (quant conventions like _calc_var_S)
    "DTZ",     # timezone-aware datetime — too noisy for quant codebase, all dates are market dates
    "RUF012",  # mutable class attr defaults — quant modules use class-level config dicts intentionally
]

[tool.ruff.lint.per-file-ignores]
"app/models/*" = ["N805"]
"app/schemas/*" = ["N805"]
"tests/*" = ["PT004"]
"alembic/*" = ["E501", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
include = ["app"]
exclude = ["alembic", "scripts", ".venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "pandas.*",
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "polars.*",
    "tushare.*",
    "akshare.*",
    "sklearn.*",
    "lightgbm.*",
    "hmmlearn.*",
    "cvxpy.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "--timeout=30"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring database",
    "backtest: marks backtest tests",
]

[tool.pytest-asyncio]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/venv/*",
    "app/tests/*",
    "app/db/*",
    "app/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
